# course_work_6

./: .env  README.md  pyproject.toml  utils.py
blog/: urls.py
blog/migrations/: 0002_alter_blog_date.py
blog/templates/blog/: blog_list.html
config/: settings.py  urls.py
mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailing/jobs/: jobs.py  task.py
mailing/migrations/: 0001_initial.py  0002_mailing_message.py  0003_alter_mailing_periodicity_logmailing.py  0004_mailing_is_active_partner_is_active.py  0005_alter_partner_options.py
mailing/templates/mailing/: mailing_detail_manage.html  mailing_detail_user.html  mailing_form.html  mailing_update_user.html  mailings_list_user.html  manage_mailing.html
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: index.html  profile_view.html
main/templates/main/includes/: inc_main_menu.html
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_dislikes_remove_user_likes.py  0003_user_verification_code.py
users/templates/users/: email_activated.html  verify_email.html
