[tool.poetry]
name = "course-work-6"
version = "0.1.0"
description = ""
authors = ["Oleg Usachev <usaechv97@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
psycopg2 = "^2.9.9"
pillow = "^10.2.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
scheduler = "^0.8.5"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
